--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ ul li::before {
   Dr Thomas Morrill
 </h1>
 
-<img scr="img/thms.png" alt="A stylized portrait of Dr Morrill">
+<img src="img/thms.png" alt="A stylized portrait of Dr Morrill" class="inline">
 
 <p>
   The Overboard Partitioner
