cleaning up the joint

--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@ ul li::before {
   width: 1em; /* Also needed for space (tweak if needed) */
   margin-left: -1em; /* Also needed for space (tweak if needed) */
 }
+div{
+  max-width:800px;
+}
+
 </style>
+<div>
+  <img src="img/thms.png" alt="A stylized portrait of Dr Morrill" style="float: right;" width="290" height="300">
+</div>
+
 <h1>
   Dr Thomas Morrill
 </h1>
-
-<img src="img/thms.png" alt="A stylized portrait of Dr Morrill" class="inline">
 
 <p>
   The Overboard Partitioner
@@ -45,7 +51,11 @@ ul li::before {
     <li> <a href="https://www.unsw.adfa.edu.au/science/number-theory">UNSW Canberra Number Theory Group</a>
     <li> <a href="https://github.com/tsmorrill">GitHub</a>
     <li> <a href="https://jocko-homomorphism.bandcamp.com/">Music</a>
+    <li> <a href="https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/vq27zt39g">Thesis</a>
   </ul>
+</p>
+<p>
+  Portrait by <a href="https://twitter.com/DataErase">DataErase</a>.
 </p>
 </body>
 </html>
