--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ div{
   The Overboard Partitioner
   <ul>
     <li> <a href="./Morrill-CV.pdf">Curriculum Vitae (Updated 2020 April 20)</a>
+    <li> <a href="./slides/index.html">Lecture Slides (Updated 2020 August 6)</a>
     <li> <a href="https://arxiv.org/search/math?searchtype=author&query=Morrill%2C+T">Preprints</a>
     <li> <a href="https://www.unsw.adfa.edu.au/science/number-theory">UNSW Canberra Number Theory Group</a>
     <li> <a href="https://github.com/tsmorrill">GitHub</a>
