--- a/slides/index.html
+++ b/slides/index.html
@@ -44,6 +44,7 @@ div{
   Lecture Slides
   <ul>
     <li> <a href="./look-knave.pdf">2020 August 6: Look, Knave</a>
+    <li> <a href="./further-knave.pdf">2020 October 8: Further Study of the Knave Map</a>
   </ul>
 </p>
 </body>
