added talk slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -45,6 +45,7 @@ div{
   <ul>
     <li> <a href="./look-knave.pdf">2020 August 6: Look, Knave</a>
     <li> <a href="./further-knave.pdf">2020 October 8: Further Study of the Knave Map</a>
+    <li> <a href="./cranks.pdf">2021 March 6: Sign Changes in the Prime Number Theorem</a>
     <li> <a href="./cranks.pdf">2021 July 19: Moment Inequalities of Overpartition Cranks</a>
     <li> <a href="./2021-08-09 partns.pdf">2021 September 8: The Theory of Integer Partitions, I</a>
   </ul>
