--- a/slides/index.html
+++ b/slides/index.html
@@ -49,6 +49,7 @@ div{
     <li> <a href="./cranks.pdf">2021 July 19: Moment Inequalities of Overpartition Cranks</a>
     <li> <a href="./2021-09-09 partns.pdf">2021 September 9: The Theory of Integer Partitions, I</a>
     <li> <a href="./2021-09-23 partns.pdf">2021 September 23: The Theory of Integer Partitions, II</a>
+    <li> <a href="./2022-02-10 rooks.pdf">2022 February 10: Rook Polynomials: A Straight-Forward Problem</a>    
   </ul>
 </p>
 </body>
