--- a/slides/index.html
+++ b/slides/index.html
@@ -36,6 +36,7 @@ div{
 }
 
 </style>
+
 <h1>
   Dr Thomas Morrill
 </h1>
@@ -43,14 +44,17 @@ div{
 <p>
   Lecture Slides
   <ul>
-    <li> <a href="./look-knave.pdf">2020 August 6: Look, Knave</a>
-    <li> <a href="./further-knave.pdf">2020 October 8: Further Study of the Knave Map</a>
-    <li> <a href="./cranks.pdf">2021 March 6: Sign Changes in the Prime Number Theorem</a>
-    <li> <a href="./cranks.pdf">2021 July 19: Moment Inequalities of Overpartition Cranks</a>
-    <li> <a href="./2021-09-09 partns.pdf">2021 September 9: The Theory of Integer Partitions, I</a>
-    <li> <a href="./2021-09-23 partns.pdf">2021 September 23: The Theory of Integer Partitions, II</a>
-    <li> <a href="./2022-02-10 rooks.pdf">2022 February 10: Rook Polynomials: A Straight-Forward Problem</a>    
+      <li> <a href="./2022-04-09 stanley.pdf"> 2022 April 9: A Stanley-Elder Type Relationship for Overpartitions</a>
+      <li> <a href="./2022-04-07 cranks.pdf"> 2022 April 7: Quasimodularity of the k-th Residual Cranks</a>
+      <li> <a href="./2022-02-10 rooks.pdf"> 2022 February 10: Rook Polynomials: A Straight-Forward Problem</a>
+      <li> <a href="./2021-09-23 partns.pdf"> 2021 September 23: The Theory of Integer Partitions, II</a>
+      <li> <a href="./2021-09-09 partns.pdf"> 2021 September 9: The Theory of Integer Partitions, I</a>
+      <li> <a href="./cranks.pdf"> 2021 July 19: Moment Inequalities of Overpartition Cranks</a>
+      <li> <a href="./cranks.pdf"> 2021 March 6: Sign Changes in the Prime Number Theorem</a>
+      <li> <a href="./further-knave.pdf"> 2020 October 8: Further Study of the Knave Map</a>
+      <li> <a href="./look-knave.pdf"> 2020 August 6: Look, Knave</a>
   </ul>
 </p>
+
 </body>
 </html>
