--- a/writings/abstract.html
+++ b/writings/abstract.html
@@ -3,6 +3,8 @@
 <body>
 <style>
 body{
+  width:960px;
+  margin:0 auto;
   background-color: #202028;
 }
 a{
@@ -37,12 +39,8 @@ div{
 
 </style>
 <h1>
-  Dr Thomas Morrill
-</h1>
-
-<p>
   Why Should K-12 Teachers Learn Abstract Algebra?
-</p>
+</h1>
 
 <p>
   Quality mathematics instruction necessarily includes explanation of why mathematical processes work as they do. This is most relevant at the foundational levels, when students first encounter arithmetic, algebra, and geometry. However, mastery of this understanding is taught at the third-year college level. In short, abstract algebra equips a teacher of K-12 mathematics with the understanding required to answer many of the tricky questions their own students will be coming up with.
