--- a/writings/index.html
+++ b/writings/index.html
@@ -3,6 +3,8 @@
 <body>
 <style>
 body{
+  width:960px;
+  margin:0 auto;
   background-color: #202028;
 }
 a{
@@ -43,7 +45,10 @@ div{
 <p>
   Other Writings
   <ul>
-    <li> <a href="./abstract.html">2022 Mar 25: Why Should K-12 Teachers Learn Abstract Algebra?</a>
+    <li> <a href="./abstract.html"> 2022 April 10: Why Should K-12 Teachers Learn Abstract Algebra?</a>
+    <li> <a href="https://wtbc.bandcamp.com/merch/midnight-missives"> 2020 May 24: Midnight Missives</a>
+    <li> <a href="https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/vq27zt39g">2017 May 25:
+Overpartition Ranks, Cranks, and Frobenius Representations (Dissertation)</a>
   </ul>
 </p>
 </body>
