--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 <style>
 body{
+  width:960px;
+  margin:0 auto;
   background-color: #202028;
 }
 a{
@@ -48,12 +50,12 @@ div{
   The Overboard Partitioner
   <ul>
     <li> <a href="./Morrill-CV.pdf">Curriculum Vitae (Updated 2021 June 4)</a>
-    <li> <a href="./slides/index.html">Lecture Slides (Updated 2022 February 10)</a>
+    <li> <a href="./slides/index.html">Lecture Slides (Updated 2022 April 10)</a>
     <li> <a href="https://arxiv.org/search/math?searchtype=author&query=Morrill%2C+T">Preprints</a>
+    <li> <a href="./writings/index.html">Other Writings</a>
     <li> <a href="https://www.unsw.adfa.edu.au/science/number-theory">UNSW Canberra Number Theory Group</a>
     <li> <a href="https://github.com/tsmorrill">GitHub</a>
     <li> <a href="https://jocko-homomorphism.bandcamp.com/">Music</a>
-    <li> <a href="https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/vq27zt39g">Thesis</a>
   </ul>
 </p>
 <p>
