--- a/writings/abstract.html
+++ b/writings/abstract.html
@@ -83,7 +83,7 @@ div{
 <p>
   Distributivity
   <ul>
-    <li> <a>How does the addition algorithm work? Why are there carries?</a>
+    <li> <a>How does the multiplication algorithm work? Why are there carries?</a>
     <li> <a>Why is (x + y)^2 not equal to (x^2 + y^2)? Which other operations are nonlinear?</a>
   </ul>
 </p>
