--- a/writings/index.html
+++ b/writings/index.html
@@ -55,6 +55,7 @@ Overpartition Ranks, Cranks, and Frobenius Representations (Dissertation)</a>
 <p>
   Other Writings
   <ul>
+    <li> <a href="./abstract.html"> 2022 June 7: Set Relation Exercises</a>
     <li> <a href="./abstract.html"> 2022 April 10: Why Should K-12 Teachers Learn Abstract Algebra?</a>
     <li> <a href="https://wtbc.bandcamp.com/merch/midnight-missives"> 2020 May 24: Midnight Missives</a>
   </ul>
