--- a/index.html
+++ b/index.html
@@ -53,9 +53,15 @@ div{
     <li> <a href="./slides/index.html">Lecture Slides (Updated 2022 April 10)</a>
     <li> <a href="https://arxiv.org/search/math?searchtype=author&query=Morrill%2C+T">Preprints</a>
     <li> <a href="./writings/index.html">Other Writings</a>
+  </ul>
+</p>
+<p>
+  Links
+  <ul>
+    <li> <a href="https://mathsfeed.blog/">Dynamical Mathematical Gazette</a>
     <li> <a href="https://www.unsw.adfa.edu.au/science/number-theory">UNSW Canberra Number Theory Group</a>
-    <li> <a href="https://github.com/tsmorrill">GitHub</a>
-    <li> <a href="https://jocko-homomorphism.bandcamp.com/">Music</a>
+    <li> <a href="https://github.com/tsmorrill">My GitHub</a>
+    <li> <a href="https://jocko-homomorphism.bandcamp.com/">My Music</a>
   </ul>
 </p>
 <p>
