--- a/writings/index.html
+++ b/writings/index.html
@@ -57,6 +57,7 @@ Overpartition Ranks, Cranks, and Frobenius Representations (Dissertation)</a>
   Internal Links
   <ul>
     <li> <a href="./challenges.html"> Past Math Challenges</a>
+    <li> <a href="./2022-06-23 Euclid.pdf"> 2022 June 23 How to Calculate Euclidean Rhythms by Hand</a>
     <li> <a href="./relations.html"> 2022 June 7: Set Relation Exercises</a>
     <li> <a href="./abstract.html"> 2022 April 10: Why Should K-12 Teachers Learn Abstract Algebra?</a>
   </ul>
