--- a/writings/abstract.html
+++ b/writings/abstract.html
@@ -38,6 +38,11 @@ div{
 }
 
 </style>
+
+<h1>
+  <a href="../index.html">The Overboard Partitioner</a>
+</h1>
+
 <h1>
   Why Should K-12 Teachers Learn Abstract Algebra?
 </h1>
