Color by Numbers Day

--- a/writings/materials/color/index.html
+++ b/writings/materials/color/index.html
@@ -44,13 +44,12 @@ div{
 </h1>
 
 <p>
-  Class Materials
+  Color by Numbers Day
   <ul>
-    <li> <a href="./materials/color/index.html">Color by Numbers Day</a>
-    <li> <a href="./materials/2022-08-26 Intro Survey.pdf">Introduction Survey pdf (Updated 2022 August 26)</a>
-    <li> <a href="./materials/2022-08-26 Intro Survey.tex">Introduction Survey tex Source (Updated 2022 August 26)</a>
-    <li> <a href="./materials/2022-08-26 Numeracy Scale.pdf">Numeracy Scale pdf (Updated 2022 August 26)</a>
-    <li> <a href="./materials/2022-08-26 Numeracy Scale.tex">Numeracy Scale tex Source (Updated 2022 August 26)</a>
+    <li> <a href="./Mandelbrot.pdf">Mandelbrot Set</a>
+    <li> <a href="./Pascal.pdf">Pascal's Triangle</a>
+    <li> <a href="./Ulam.pdf">Ulam Spiral</a>
+    <li> <a href="./Vedic.pdf">Vedic Square</a>
   </ul>
 </p>
 
