tidy up directory

--- a/materials/color/index.html
+++ b/materials/color/index.html
@@ -40,16 +40,16 @@ div{
 </style>
 
 <h1>
-  <a href="../index.html">The Overboard Partitioner</a>
+  <a href="../../index.html">The Overboard Partitioner</a>
 </h1>
 
 <p>
   Color by Numbers Day
   <ul>
-    <li> <a href="./Mandelbrot.pdf">Mandelbrot Set</a>
-    <li> <a href="./Pascal.pdf">Pascal's Triangle</a>
-    <li> <a href="./Ulam.pdf">Ulam Spiral</a>
-    <li> <a href="./Vedic.pdf">Vedic Square</a>
+    <li> <a href="./Mandelbrot.pdf">Mandelbrot Set (Updated 2020 October 6)</a>
+    <li> <a href="./Pascal.pdf">Pascal's Triangle (Updated 2020 October 6)</a>
+    <li> <a href="./Ulam.pdf">Ulam Spiral (Updated 2020 October 6)</a>
+    <li> <a href="./Vedic.pdf">Vedic Square (Updated 2020 October 6)</a>
   </ul>
 </p>
 
