--- a/materials/index.html
+++ b/materials/index.html
@@ -46,11 +46,11 @@ div{
 <p>
   Class Materials
   <ul>
-    <li> <a href="./materials/color/index.html">Color by Numbers Day</a>
-    <li> <a href="./materials/2022-08-26 Intro Survey.pdf">Introduction Survey pdf (Updated 2022 August 26)</a>
-    <li> <a href="./materials/2022-08-26 Intro Survey.tex">Introduction Survey tex Source (Updated 2022 August 26)</a>
-    <li> <a href="./materials/2022-08-26 Numeracy Scale.pdf">Numeracy Scale pdf (Updated 2022 August 26)</a>
-    <li> <a href="./materials/2022-08-26 Numeracy Scale.tex">Numeracy Scale tex Source (Updated 2022 August 26)</a>
+    <li> <a href="./color/index.html">Color by Numbers Day</a>
+    <li> <a href="./2022-08-26 Intro Survey.pdf">Introduction Survey pdf (Updated 2022 August 26)</a>
+    <li> <a href="./2022-08-26 Intro Survey.tex">Introduction Survey tex Source (Updated 2022 August 26)</a>
+    <li> <a href="./2022-08-26 Numeracy Scale.pdf">Numeracy Scale pdf (Updated 2022 August 26)</a>
+    <li> <a href="./2022-08-26 Numeracy Scale.tex">Numeracy Scale tex Source (Updated 2022 August 26)</a>
   </ul>
 </p>
 
