--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ div{
     <li> <a href="./Morrill-CV.pdf">Curriculum Vitae (Updated 2022 May 27)</a>
     <li> <a href="./slides/index.html">Lecture Slides (Updated 2022 April 10)</a>
     <li> <a href="https://arxiv.org/search/math?searchtype=author&query=Morrill%2C+T">arXiv Preprints</a>
-    <li> <a href="./writings/materials.html">Class Materials</a>
+    <li> <a href="./materials/index.html">Class Materials</a>
     <li> <a href="./writings/index.html">Other Writings</a>
   </ul>
 </p>
