--- a/slides/index.html
+++ b/slides/index.html
@@ -46,6 +46,7 @@ div{
 <p>
   Lecture Slides
   <ul>
+      <li> <a href="./2023-09-20 slack.pdf"> 2023 September 20: The Student Must Have Slack!</a>
       <li> <a href="./2022-04-09 stanley.pdf"> 2022 April 9: A Stanley-Elder Type Relationship for Overpartitions</a>
       <li> <a href="./2022-04-07 cranks.pdf"> 2022 April 7: Quasimodularity of the k-th Residual Cranks</a>
       <li> <a href="./2022-02-10 rooks.pdf"> 2022 February 10: Rook Polynomials: A Straight-Forward Problem</a>
