--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ div{
 </style>
 
 <div>
-  <img src="img/thms.png" alt="A stylized portrait of Dr Morrill" style="float: right;" width="290" height="300">
+  <img src="img/tammy_800.png" alt="A simple portrait of Dr Morrill" style="float: right;" width="300" height="300">
 </div>
 
 <h1>
@@ -64,8 +64,8 @@ div{
     <li> <a href="https://jocko-homomorphism.bandcamp.com/">My Music</a>
   </ul>
 </p>
-<p>
+<!-- <p>
   Portrait by <a href="https://twitter.com/DataErase">DataErase</a>.
-</p>
+</p> -->
 </body>
 </html>
