add jokes pages

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ div{
     <li> <a href="./slides/index.html">Lecture Slides (Updated 17th October 2023)</a>
     <li> <a href="https://arxiv.org/search/math?searchtype=author&query=Morrill%2C+T">arXiv Preprints</a>
     <li> <a href="./materials/index.html">Class Materials</a>
+    <li> <a href="./jokes/index.html">Math Jokes</a>
     <li> <a href="./writings/index.html">Other Writings</a>
   </ul>
 </p>
