--- a/jokes/index.html
+++ b/jokes/index.html
@@ -118,6 +118,13 @@ Why did the probabilist throw a dessert tray out the window?
 <hr>
 
 <p>
+What did Archimedes name his fursona?
+<br><br>
+&emsp; Conic the hedgehog.
+</p>
+<hr>
+
+<p>
 Why can't you make fun of transfinite integers?
 <br><br>
 &emsp; They are beyond parity.
