--- a/jokes/index.html
+++ b/jokes/index.html
@@ -62,6 +62,13 @@ My favorite trigonometric function is cosine, but its reciprocal is a close seca
 <hr>
 
 <p>
+An apeirogon walks into a bar. The bartender turns to them and says,
+<br><br>
+&emsp; "Hey pal, why the long face?"
+</p>
+<hr>
+
+<p>
 Why do geometers have the fastest internet connections?
 <br><br>
 &emsp; They always splurge on a fiber bundle.
