--- a/jokes/index.html
+++ b/jokes/index.html
@@ -57,6 +57,17 @@ What was Galois's worst subject?
 <hr>
 
 <p>
+So Émile Mathieu orders popcorn at the movie theater.
+<br><br>
+&emsp; The vendor asks if he would like extra butter.
+<br><br>
+He says, "I want it simple."
+<br><br>
+&emsp; "Do you mean, plain?"
+<br><br>
+"No, just make sure you quotient out all the kernels."
+
+<p>
 My favorite trigonometric function is cosine, but its reciprocal is a close secant.
 </p>
 <hr>
