--- a/jokes/index.html
+++ b/jokes/index.html
@@ -57,15 +57,13 @@ What was Galois's worst subject?
 <hr>
 
 <p>
-So Émile Mathieu orders popcorn at the movie theater.
-<br><br>
-&emsp; The vendor asks if he would like extra butter.
-<br><br>
-He says, "I want it simple."
+So Émile Mathieu goes to the movie theater and orders popcorn. The server asks how he would like it. He says, "Simple."
 <br><br>
 &emsp; "Do you mean, plain?"
 <br><br>
-"No, just make sure you quotient out all the kernels."
+"No, just make sure you quotient out the kernels."
+</p>
+<hr>
 
 <p>
 My favorite trigonometric function is cosine, but its reciprocal is a close secant.
