--- a/index.html
+++ b/index.html
@@ -47,16 +47,24 @@ div{
 </h1>
 
 <p>
-  The Overboard Partitioner
+  Academics
   <ul>
     <li> <a href="./Morrill-CV.pdf">Curriculum Vitae (Updated 2023 November 1)</a>
     <li> <a href="./slides/index.html">Lecture Slides (Updated 17th October 2023)</a>
     <li> <a href="https://arxiv.org/search/math?searchtype=author&query=Morrill%2C+T">arXiv Preprints</a>
     <li> <a href="./materials/index.html">Class Materials</a>
-    <li> <a href="./jokes/index.html">Math Jokes</a>
     <li> <a href="./writings/index.html">Other Writings</a>
   </ul>
 </p>
+
+<p>
+  For Fun
+  <ul>
+    <li> <a href="./jokes/index.html">Math Jokes</a>
+    <li> <a href="./luna.pdf">2025 Lunar Calendar</a>
+  </ul>
+</p>
+
 <p>
   Links
   <ul>
