--- a/jokes/index.html
+++ b/jokes/index.html
@@ -57,9 +57,9 @@ What was Galois's worst subject?
 <hr>
 
 <p>
-So Émile Mathieu goes to the movie theater and orders popcorn. The server asks how he would like it. He says, "Simple."
+Émile Mathieu goes to the movie theater and orders popcorn. The server asks how he would like it. He says, "Simple."
 <br><br>
-&emsp; "Do you mean, plain?"
+&emsp; "Do you mean plain?"
 <br><br>
 "No, just make sure you quotient out the kernels."
 </p>
@@ -129,7 +129,7 @@ Why did the probabilist throw a dessert tray out the window?
 <p>
 What did Archimedes name his fursona?
 <br><br>
-&emsp; Conic the hedgehog.
+&emsp; Conic the Hedgehog.
 </p>
 <hr>
 
@@ -152,7 +152,7 @@ The Original Sigma Male.
 <p>
 What is a marine biologist's favorite infinitessimal?
 <br><br>
-&emsp; The skarklength differential.
+&emsp; The sharklength differential.
 </p>
 <hr>
 
