--- a/jokes/index.html
+++ b/jokes/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<html><head>
 
-<title>Jokes by the Overboard Partitioner</title>
+<head>
+<title>Math Jokes</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="keywords" content="math, humor, jokes">
 </head>
@@ -46,7 +46,7 @@ div{
 
 </style>
 <h1>
-  <a href="../index.html">Jokes by the Overboard Partitioner</a>
+  <a href="../index.html">The Overboard Partitioner</a>
 </h1>
 
 <p>
@@ -166,7 +166,7 @@ To learn the Farey sequence.
 <p>
 A rose by any other name would exhibit the same invariants.
 <br><br>
--<i>Homeomorphism and Julia Set</i>
+&emsp; -<i>Homeomorphism and Julia Set</i>
 </p>
 <hr>
 
@@ -176,7 +176,10 @@ How does an uncultured topologist serve wine?
 &emsp; I don't know, how?
 <br><br>
 Straight from the Klein bottle.
-<br><br>
+</p>
+<hr>
+
+<p>
 &emsp; Then how does a cultured topologist serve wine?
 <br><br>
 They pour it into a decantor set first.
@@ -193,8 +196,6 @@ And for those who made it to the bottom of this list:
 &emsp; Congratulations, grad!
 </p>
 <hr>
-
-<a href="./after-hours.html">After Hours Jokes</a>
 
 </body>
 </html>
