--- a/color/index.html
+++ b/color/index.html
@@ -40,7 +40,7 @@ div{
 </style>
 
 <h1>
-  <a href="../../index.html">The Overboard Partitioner</a>
+  <a href="../index.html">The Overboard Partitioner</a>
 </h1>
 
 <p>
