--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ h1{
   color:#F8F8F0;
   font-family:courier new;
 }
+h2{
+  color:#F8F8F0;
+  font-family:courier new;
+}
 p{
   color:#F8F8F0;
   font-family:courier new;
@@ -46,12 +50,15 @@ div{
   Dr Tamsyn Morrill
 </h1>
 
+<h2>
+  The Overboard Partitioner
+</h2>
+
 <p>
   Academics
   <ul>
-    <li> <a href="./Morrill-CV.pdf">Curriculum Vitae (Updated 2023 November 1)</a>
+    <li> <a href="./Morrill-CV.pdf">Curriculum Vitae (Updated 1st November 2023)</a>
     <li> <a href="./slides/index.html">Lecture Slides (Updated 17th October 2023)</a>
-    <li> <a href="https://arxiv.org/search/math?searchtype=author&query=Morrill%2C+T">arXiv Preprints</a>
     <li> <a href="./materials/index.html">Class Materials</a>
     <li> <a href="./writings/index.html">Other Writings</a>
   </ul>
@@ -60,17 +67,19 @@ div{
 <p>
   For Fun
   <ul>
-    <li> <a href="./jokes/index.html">Math Jokes</a>
+    <li> <a href="./jokes/index.html">Math Jokes (Updated 26th January 2025)</a>
+    <li> <a href="./color/index.html">Color by Numbers Day</a>
+    <li> <a href="./2022-06-23 Euclid.pdf"> How to Calculate Euclidean Rhythms by Hand</a>
     <li> <a href="./luna.pdf">2025 Lunar Calendar</a>
+    <li> <a href="https://jocko-homomorphism.bandcamp.com/">My Music</a>
   </ul>
 </p>
 
 <p>
   Links
   <ul>
-    <li> <a href="https://mathsfeed.blog/">Dynamical Mathematical Gazette</a>
-    <li> <a href="https://github.com/tsmorrill">My GitHub</a>
-    <li> <a href="https://jocko-homomorphism.bandcamp.com/">My Music</a>
+    <li> <a href="https://arxiv.org/search/math?searchtype=author&query=Morrill%2C+T">arXiv Preprints</a>
+    <li> <a href="https://github.com/tsmorrill">GitHub</a>
   </ul>
 </p>
 <!-- <p>
