--- a/jokes/index.html
+++ b/jokes/index.html
@@ -50,6 +50,20 @@ div{
 </h1>
 
 <p>
+What do you call four turbines in a row?
+<br><br>
+&emsp; A generating series.
+</p>
+<hr>
+
+<p>
+What kind of mathematics will keep you dry in a rainstorm?
+<br><br>
+&emsp; Umbral calculus.
+</p>
+<hr>
+
+<p>
 What was Galois's worst subject?
 <br><br>
 &emsp; Dual spaces.
