--- a/jokes/index.html
+++ b/jokes/index.html
@@ -50,6 +50,13 @@ div{
 </h1>
 
 <p>
+Why did Cauchy integrate around an annulus?
+<br><br>
+&emsp; Because it had a nice ring to it.
+</p>
+<hr>
+
+<p>
 What do you call four turbines in a row?
 <br><br>
 &emsp; A generating series.
