--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@ div{
   <ul>
     <li> <a href="./jokes/index.html">Math Jokes (Updated 29th January 2025)</a>
     <li> <a href="./color/index.html">Color by Numbers Day</a>
-    <li> <a href="./2022-06-23 Euclid.pdf"> How to Calculate Euclidean Rhythms by Hand</a>
-    <li> <a href="./luna.pdf">2025 Lunar Calendar</a>
+    <li> <a href="./fun/2022-06-23 Euclid.pdf"> How to Calculate Euclidean Rhythms by Hand</a>
+    <li> <a href="./fun/Belphegor.pdf">Belphegor's Prime</a>
+    <li> <a href="./fun/luna.pdf">2025 Lunar Calendar</a>
     <li> <a href="https://jocko-homomorphism.bandcamp.com/">My Music</a>
   </ul>
 </p>
