new slides, new joke

--- a/slides/index.html
+++ b/slides/index.html
@@ -46,6 +46,7 @@ div{
 <p>
   Lecture Slides
   <ul>
+      <li> <a href="./2025-02-04 summer.pdf"> 2025 February 5: Chewing Bubblegum and Enumerating Partitions</a>
       <li> <a href="./2023-10-17 knavery.pdf"> 2023 October 17: The Knave's Cosmological Theorem</a>
       <li> <a href="./2023-09-20 slack.pdf"> 2023 September 20: The Student Must Have Slack!</a>
       <li> <a href="./2022-04-09 stanley.pdf"> 2022 April 9: A Stanley-Elder Type Relationship for Overpartitions</a>
