--- a/jokes/index.html
+++ b/jokes/index.html
@@ -50,6 +50,13 @@ div{
 </h1>
 
 <p>
+Why do mathematicians get excited for the beginning of a lecture?
+<br><br>
+&emsp; Because that's when they do attendance!
+</p>
+<hr>
+
+<p>
 Why did Cauchy integrate around an annulus?
 <br><br>
 &emsp; Because it had a nice ring to it.
