--- a/jokes/index.html
+++ b/jokes/index.html
@@ -50,6 +50,13 @@ div{
 </h1>
 
 <p>
+Who does a mantissa bring along on a date?
+<br><br>
+&emsp; Their significand other!
+</p>
+<hr>
+
+<p>
 Why do mathematicians get excited for the beginning of a lecture?
 <br><br>
 &emsp; Because that's when they do attendance!
