law of the excluded middle

--- a/jokes/index.html
+++ b/jokes/index.html
@@ -50,6 +50,14 @@ div{
 </h1>
 
 <p>
+What makes deniers of the Law of the Excluded Middle so shy?
+<br><br>
+&emsp;
+They just don't know how to take a complement!
+</p>
+<hr>
+
+<p>
 Who does a mantissa bring along on a date?
 <br><br>
 &emsp; Their significand other!
