--- a/materials/index.html
+++ b/materials/index.html
@@ -46,6 +46,8 @@ div{
 <p>
   Class Materials
   <ul>
+    <li> <a href="./2025-03-20 Pronouns.pdf">Common Pitfalls About Pronouns pdf (Updated 2025 March 20)</a>
+    <li> <a href="./2025-03-20 Pronouns.tex">Common Pitfalls About Pronouns tex source (Updated 2025 March 20)</a>
     <li> <a href="./2022-08-26 Intro Survey.pdf">Introduction Survey pdf (Updated 2022 August 26)</a>
     <li> <a href="./2022-08-26 Intro Survey.tex">Introduction Survey tex Source (Updated 2022 August 26)</a>
     <li> <a href="./2022-08-26 Numeracy Scale.pdf">Numeracy Scale pdf (Updated 2022 August 26)</a>
